# 381706-2_gaviushova_lab

./: .travis.yml  CMakeLists.txt  README.md
Arifm/: .travis.yml  README.md
Arrlist/: .travis.yml  CMakeLists.txt  README.md
List/: .travis.yml  CMakeLists.txt  README.md  О.list.doc
List/List/: CMakeLists.txt  List_main.cpp
List/listlib/: CMakeLists.txt  List.h
List/listtest/: CMakeLists.txt  ListTest.cpp
Matrix/: .travis.yml  CMakeLists.txt  README.md  О.matrix.doc
Matrix/Matrix/: CMakeLists.txt  sample_matrix.cpp
Matrix/matrixlib/: CMakeLists.txt  utmatrix.h
Matrix/matrixtest/: CMakeLists.txt
Multy/: .travis.yml  CMakeLists.txt  README.md  О.multistack.doc
Multy/Multistack/: Multistack_main.cpp
Multy/multistacklib/: multistack.cpp  multistack.h
Poly/: CMakeLists.txt  README.md  О.polynom.doc
Poly/Polynom/: CMakeLists.txt
Poly/polynomlib/: CMakeLists.txt
Poly/polynomtest/: CMakeLists.txt
SQueue/: .travis.yml  CMakeLists.txt  README.md
StQueue/: README.md
vector/: CMakeLists.txt
vectorlib/: main.cpp
