cmake_minimum_required(VERSION 2.8) #???????? ?????? CMake.

set(PROJECT_NAME 381706-2_gavriushova_lab) #??????? ??????? ????????? ?????????? ? ?????? ???????
project(${PROJECT_NAME}) # ???????? ???????

set(stack_and_queue stack_and_queue )
set(stack_and_queue_lib  stack_and_queue_lib)
set(stack_and_queue_test stack_and_queue_test)


set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "Configs" FORCE) #????????? ?????????? CMAKE_CONFIGURATION_TYPES ?? ????????? "Debug;Release" ? ??????/???????? Configs, ?????????? ??????????? ? ??????????? ????? ????????? ?? ???? ??????,
if(NOT CMAKE_BUILD_TYPE) # ???????? ????????? ? ??????????? ????????? ??????
  set(CMAKE_BUILD_TYPE Release) #???? ??? ?? ????????????? Release
endif()

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/stack_and_queue )
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/gtest)



add_subdirectory(stack_and_queue )
add_subdirectory(stack_and_queue_lib)
add_subdirectory(stack_and_queue_test)
add_subdirectory(gtest)


file(GLOB hdrs "*.h*") #????????? ? ?????????? hdrs ??? ????? ? ??????????? .h
file(GLOB srcs "*.cpp") #????????? ? ?????????? srcs ??? ????? ? ??????????? .h
